<resources>
    <string name="app_name">Saloon</string>
    <string name="date_text">Schedule the date here</string>
    <string name="text2_">Select your preferred time</string>
    <string name="text1_">Start your appointment here</string>
    <string name="proceed_">Proceed</string>
    <string name="slot1">09.00am-09.30am</string>
    <string name="slot2">09.30am-10.00am</string>
    <string name="slot3">10.00am-10.30am</string>
    <string name="slot4">10.30am-11.00am</string>
    <string name="slot5">11.00am-11.30am</string>
    <string name="slot6">11.30am-12.00pm</string>
    <string name="slot7">12.00pm-12.30pm</string>
    <string name="slot8">03.00pm-03.30pm</string>
    <string name="slot9">03.30pm-04.00pm</string>
    <string name="slot10">04.00pm-04.30pm</string>
    <string name="slot11">04.30pm-05.00pm</string>
    <string name="slot12">05.00pm-05.30pm</string>
    <string name="proceed2_">Proceed</string>
    <string name="userName">User Name</string>
    <string name="search">Search Shop</string>
    <string name="shop">Shop</string>
    <string name="editInfo">Edit Info</string>
    <string name="pastBookings">Past Bookings</string>
    <string name="bookings">Bookings</string>
    <string name="offers">Offers</string>
    <string name="help">Help</string>
    <string name="fname">First Name</string>
    <string name="lname">last name</string>
    <string name="email">Email</string>
    <string name="phoneNo">Phone Number</string>
    <string name="password">Password</string>
    <string name="city">City</string>
    <string name="condition">I accept the Terms and Conditions including privacy</string>
    <string name="contin">Continue</string>
    <string name="createAccount">Create Account</string>
    <string name="settings">Settings</string>
    <string name="addCut">Add HairCut</string>
    <string name="payment">Payment</string>
    <string name="adminDashboard">Admin DashBoard</string>
    <string name="feedback">Feedback</string>
    <string name="salon">Ultra Salon</string>


    <string name="salon_hub">Salon Hub</string>
    <string name="proceed">Proceed</string>
    <string name="create">Create</string>
    <string name="click_for_newacc">Create new Account? Click here</string>
    <string name="forgot_password">Forgot_Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="tp_num">+94 776662542</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_cart" />
    <string name="commnunicate" />
    <string-array name="cities">
        <item> </item>
        <item>Colombo-1</item>
        <item>Colombo-2</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="send">send</string>
    <string name="share">Share</string>
    <string name="profile" />
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="notification">Notification</string>
    <string name="message_fragment">Message fragment</string>


</resources>
