<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

</androidx.constraintlayout.widget.ConstraintLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@color/grayLight"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/allerta"
        android:lineSpacingExtra="4sp"
        android:text="@string/createAccount"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:typeface="sans" />

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="380dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_height="400dp"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_marginStart="15dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="10sp"
                android:paddingRight="5dp"
                android:paddingBottom="10sp"
                android:text="@string/fname"
                android:textSize="21sp" />

            <EditText
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:paddingLeft="15sp"
                android:paddingRight="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingTop="10sp"
                android:paddingRight="5dp"
                android:paddingBottom="10sp"
                android:text="@string/lname"
                android:textSize="21sp" />
            <EditText
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:paddingLeft="15sp"
                android:paddingRight="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingTop="10sp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="10sp"
            android:text="@string/email"
            android:textSize="21sp" />
            <EditText
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:paddingLeft="15sp"
                android:paddingRight="5dp"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingTop="10sp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="10sp"
            android:text="@string/phoneNo"
            android:textSize="21sp" />
            <EditText
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:paddingLeft="15sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingTop="10sp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="10sp"
            android:text="@string/password"
            android:textSize="21sp" />
            <EditText
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:paddingLeft="15sp"
                android:paddingRight="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingTop="10sp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:paddingBottom="10sp"
                android:text="@string/city"
                android:textSize="21sp" />
            <Spinner
                android:id="@+id/city"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:dropDownWidth="wrap_content"
                android:dropDownSelector="@color/startBlue" />


        </LinearLayout>


    </LinearLayout>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/condition"
     />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/contin"
        android:layout_gravity="center_horizontal"
        android:background="@color/startBlue"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="20sp"
        android:backgroundTintMode="multiply"/>

</LinearLayout>



